--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,29 @@
 </head>
 <body>
 <!-- BEGIN  out-->
-<div class="out">
-	<i class="icon-sepa"></i>
-	//=include partials/partial.html  
+//=include partials/header.html 
+<div class="out" id="fullpage">
+	<!-- section -->
+	<section class="section who">
+		
+	</section>
+	<section class="section what">
+		
+	</section>
+	<section class="section where">
+		<!-- l -->
+		<div class="l">
+			<div class="l-col1">
+				
+			</div>
+			<div class="l-col2">
+				<div class="map" id="map"></div>
+			</div>
+		</div>
+	</section>
+	<section class="section why">
+		
+	</section>
 </div>
 <!-- END out-->
 </body>
