--- a/src/who.html
+++ b/src/who.html
@@ -5,6 +5,28 @@
 	//=include partials/header.html 
 	<!-- wrap -->
 	<section class="wrap">
+		<div class="line"></div>
+		<div class="outer">
+			<div class="outer__in">
+				<div class="l">
+					<div class="team">
+						<div class="nav-name">
+							<h3 class="title-middle">MEET <br>THE TEAM</h3>
+							<!-- nav -->
+							<ul class="nav">
+								<li><a href="#">Andrew</a></li>
+								<li><a href="#">Paul</a></li>
+								<li><a href="#">Alexey</a></li>
+								<li><a href="#">Oleh</a></li>
+								<li><a href="#">Anton</a></li>
+								<li class="is-active"><a href="#">Eugen</a></li>
+								<li><a href="#">Diana</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- l -->
 		<div class="l">
 			<div class="l__in">
