--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html 
-	<!-- wrap -->
-	<section class="wrap">
+	<!-- section -->
+	<section class="section is-home">
 		<!-- l -->
 		<div class="l">
 			<div class="l__in">
@@ -22,6 +22,7 @@
 					</div>
 				</div>
 			</div>
+			<i class="scroll-icon"></i>
 		</div>
 	</section>
 </div>
