--- a/src/what.html
+++ b/src/what.html
@@ -1,10 +1,10 @@
 //=include partials/head.html 
-<body class="is-what">
+<body>
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html 
-	<!-- wrap -->
-	<section class="wrap">
+	<!-- section -->
+	<section class="section is-what">
 		<!-- l -->
 		<div class="l">
 			<div class="l__in">
