--- a/src/where.html
+++ b/src/where.html
@@ -3,8 +3,8 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html 
-	<!-- wrap -->
-	<section class="wrap">
+	<!-- section -->
+	<section class="section">
 		<!-- contacts -->
 		<div class="contacts">
 			<!-- contact -->
