--- a/src/who.html
+++ b/src/who.html
@@ -1,10 +1,10 @@
 //=include partials/head.html 
-<body class="is-who">
+<body>
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html 
-	<!-- wrap -->
-	<section class="wrap">
+	<!-- section -->
+	<section class="section is-who">
 		<div class="line"></div>
 		<div class="outer">
 			<div class="outer__in">
